doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/cameronbrightwell/Downloads/BlueJ 4.1 2.1/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/cameronbrightwell/Documents/GitHub/music-organizer
-d
/Users/cameronbrightwell/Documents/GitHub/music-organizer/doc
-encoding
UTF-8
-charset
UTF-8
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicOrganizer.java
<---- end of javadoc command ---->
Loading source file /Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicOrganizer.java...
Constructing Javadoc information...
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicPlayer.java:5: error: package javazoom.jl.decoder does not exist
import javazoom.jl.decoder.JavaLayerException;
                          ^
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicPlayer.java:6: error: package javazoom.jl.player does not exist
import javazoom.jl.player.AudioDevice;
                         ^
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicPlayer.java:7: error: package javazoom.jl.player does not exist
import javazoom.jl.player.FactoryRegistry;
                         ^
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicPlayer.java:8: error: package javazoom.jl.player.advanced does not exist
import javazoom.jl.player.advanced.AdvancedPlayer;
                                  ^
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicPlayer.java:20: error: cannot find symbol
    private AdvancedPlayer player;
            ^
  symbol:   class AdvancedPlayer
  location: class MusicPlayer
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicPlayer.java:122: error: cannot find symbol
    private AudioDevice createAudioDevice()
            ^
  symbol:   class AudioDevice
  location: class MusicPlayer
/Users/cameronbrightwell/Documents/GitHub/music-organizer/MusicPlayer.java:123: error: cannot find symbol
        throws JavaLayerException
               ^
  symbol:   class JavaLayerException
  location: class MusicPlayer
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating /Users/cameronbrightwell/Documents/GitHub/music-organizer/doc/MusicOrganizer.html...
Generating /Users/cameronbrightwell/Documents/GitHub/music-organizer/doc/package-frame.html...
Generating /Users/cameronbrightwell/Documents/GitHub/music-organizer/doc/package-summary.html...
Generating /Users/cameronbrightwell/Documents/GitHub/music-organizer/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/cameronbrightwell/Documents/GitHub/music-organizer/doc/allclasses-frame.html...
Generating /Users/cameronbrightwell/Documents/GitHub/music-organizer/doc/allclasses-noframe.html...
Generating /Users/cameronbrightwell/Documents/GitHub/music-organizer/doc/index.html...
7 warnings
